--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/translation": "4.4.*",
         "symfony/twig-bundle": "^4.4",
         "symfony/validator": "4.4.*",
+        "symfony/var-dumper": "4.4.*",
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -43,7 +44,6 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/stopwatch": "^4.4",
-        "symfony/var-dumper": "^4.4",
         "symfony/web-profiler-bundle": "^4.4"
     },
     "config": {
